# vk_edu_algorithms_and_data_structures

./: .gitignore  CMakeLists.txt  README.md
arrays_pt1/: task_131_solution.cpp  task_132_solution  task_132_solution.cpp
arrays_pt1/task_131/: task_131_solution
arrays_pt2/: merge_sorted_arrs  merge_sorted_arrs.cpp  task_14_solution
bin.dbg/: binary_search_impl
binary_search/bin_search_impl/: binary_search_impl  binary_search_impl.cpp
binary_search/diploms/: task_about_diploms
binary_search/find_num_root/: find_root  find_root.cpp
binary_search/task21/: task_21_solution  task_21_solution.cpp
binary_search/very_simple_task/: simple_task  simple_task.cpp
cource_practice/: CMakeLists.txt  find_root.cpp  task_14.cpp  task_23.cpp  task_about_diploms.cpp
cource_theory/: binary_search_impl.cpp  choice_sort.cpp  counting_sort.cpp  merge_sort.cpp  quick_sort.cpp  radix_sort.cpp  search_k_order_statistics.cpp
exponential_and_ternary_search/: exponential_search  exponential_search.cpp  tempCodeRunnerFile.cpp  ternary_search  ternary_search.cpp
exponential_and_ternary_search/task_23/: task_23_solution
leetcode_practice/: 69_sqrt.cpp  704_binary_search.cpp  875_koko_eating_bananas.cpp  CMakeLists.txt  find_first_and_last_position_of_element_in_sorted_array.cpp  search_insert_position  search_insert_position.cpp  tempCodeRunnerFile.cpp  two_sum.cpp
sorting_pt1/: bubble_sort  bubble_sort.cpp  choice_sort  choose_sort  choose_sort.cpp  insert_sort  insert_sort.cpp  shell_sort  shell_sort.cpp
stack_queue_deque/: is_palindrom.cpp
(+7 files in other folders)
